@@ -1,7 +1,7 @@
 #!/bin/sh
 MAJOR=4
 MINOR=3
-REV=5
+REV=6
 sh -c "svnversion -n . | cut -d: -f2 | cut -dS -f1 | tr -d '\n'" > ./SVN_VERSION
 SVN_VERSION=`cat ./SVN_VERSION`
 #VERSION="$MAJOR.$MINOR.$REV-r$SVN_VERSION"
